--- a/credentials.yml
+++ b/credentials.yml
@@ -34,4 +34,4 @@ socketio:
 # This entry is needed if you are using Rasa X. The entry represents credentials
 # for the Rasa X "channel", i.e. Talk to your bot and Share with guest testers.
 rasa:
-  url: "http://localhost:5005/api"
+  url: "http://46.101.231.60:5005/api"
